# LessonLab-alt

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json
assets/: reset.css  style.css
src/: Pages.rs  lib.rs  main.rs
src/Apps/: mod.rs
src/Apps/LessonLab/: Application.rs  app.rs  mod.rs  routing.rs
src/Apps/LessonLab/Entry/: mod.rs
src/Apps/LessonLab/Entry/Controller/: MenuController.rs  mod.rs
src/Apps/LessonLab/Entry/Menu/: Model.rs  View.rs  ViewModel.rs
src/Apps/LessonLab/Entry/Menu/styles/: body-style.css
src/Apps/LessonLab/Entry/Model/: Menu.rs  MenuModel.rs  mod.rs
src/Apps/LessonLab/Entry/Upload/: Model.rs  View.rs  ViewModel.rs  mod.rs
src/Apps/LessonLab/Entry/Upload/styles/: header-style.css  (+2 more)
src/Apps/LessonLab/Entry/View/: Menu.rs  Upload.rs  mod.rs
src/Apps/LessonLab/Lesson/Model/: Lesson.py
src/Apps/LessonLab/RustPythonInterface/OpenAI/: ai.py  lesson_generator.rs  mod.rs
src/Apps/LessonLab/RustPythonInterface/PythonScrapers/: friendly_check.py  mod.rs  pdf_scraper.rs  pdf_to_markdown.py  weburl_to_markdown.py  weburl_to_raw_text.py
src/ComponentTemplates/: mod.rs
src/ComponentTemplates/Bar/: Bar.rs  mod.rs
src/ComponentTemplates/Button/: Button.rs  mod.rs
src/ComponentTemplates/Card/: Card.rs  mod.rs
src/ComponentTemplates/FileContainer/: FileContainer.rs  mod.rs
src/ComponentTemplates/Header/: Header.rs
src/ComponentTemplates/Overlay/: Overlay.rs  mod.rs
src/ComponentTemplates/Plus/: Plus.rs  mod.rs
src/Components/: Header.rs
src/Pages/: GenerateLesson.rs  Menu.rs  Upload.rs
(+32 files in other folders)
