[package]
edition = "2021"
name = "LessonLab"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
log = "0.4.20"
wasm-logger = "0.2.0"

# For web/development builds. Supports hot-reloading
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"

# For desktop/production builds. Does not support hot-reloading
# dioxus-desktop = "0.4.0"
