[package]
edition = "2021"
name = "LessonLab"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-router = { version = "*" }
log = "0.4.20"
wasm-logger = "0.2.0"
serde = "1.0.192"

# For web/development builds. Supports hot-reloading
dioxus-web = { version = "*" }

# For desktop/production builds. Does not support hot-reloading
# dioxus-desktop = { version = "*" }

# DO NOT UNCOMMENT ANYTHING HERE! YOU WILL BREAK THE CLI
